<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.xag.mydb2apptest.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="368dp"
                  android:layout_height="495dp"
                  tools:layout_editor_absoluteY="8dp"
                  tools:layout_editor_absoluteX="8dp">

        <TableLayout android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     tools:layout_editor_absoluteX="8dp"
                     tools:layout_editor_absoluteY="8dp">

            <TableRow   android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView  android:text="tab_id:"     android:layout_gravity="left" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" />
                <EditText  android:id="@+id/tab_id"  android:layout_gravity="right" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"  android:text="1"/>
            </TableRow>

            <TableRow   android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView  android:text="tab_name:"     android:layout_gravity="left" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" />
                <EditText  android:id="@+id/tab_name"  android:layout_gravity="right" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"  android:text="xag" />
            </TableRow>

            <TableRow   android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView  android:text="tab_value:"     android:layout_gravity="left" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" />
                <EditText  android:id="@+id/tab_value"  android:layout_gravity="right" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"  android:text="100" />
            </TableRow>
            <TableRow   android:layout_width="match_parent" android:layout_height="wrap_content">
                <Button android:id="@+id/bt1" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/bt1" android:layout_gravity="left" />
                <Button android:id="@+id/bt2" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/bt2" android:layout_gravity="right"/>
            </TableRow>

            <TableRow   android:layout_width="match_parent" android:layout_height="wrap_content">
                <Button android:id="@+id/bt3" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/bt3" android:layout_gravity="left"/>
                <Button android:id="@+id/bt4" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/bt4" android:layout_gravity="right"/>
            </TableRow>

            <TableRow   android:layout_width="match_parent" android:layout_height="wrap_content">
                <Button android:id="@+id/bt5" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/bt5" android:layout_gravity="left"/>
                <Button android:id="@+id/bt6" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/bt6" android:layout_gravity="right"/>
            </TableRow>

            <TableRow   android:layout_width="match_parent" android:layout_height="wrap_content">
                <Button android:id="@+id/bt7" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/bt7" android:layout_gravity="left"/>
                <Button android:id="@+id/bt8" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/bt8" android:layout_gravity="right"/>
            </TableRow>

            <TableRow   android:layout_width="match_parent" android:layout_height="wrap_content">
                <Button android:id="@+id/bt9" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/bt9" android:layout_gravity="left"/>
                <Button android:id="@+id/bt10" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/bt10" android:layout_gravity="right"/>
            </TableRow>

            <TableRow   android:layout_width="match_parent" android:layout_height="wrap_content">
                <Button android:id="@+id/bt11" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/bt11" android:layout_gravity="left"/>
                <Button android:id="@+id/bt12" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/bt12" android:layout_gravity="right"/>
            </TableRow>

        </TableLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
